@@ -1,3 +1,7 @@
+2012-03-05  Tom Tromey  <tromey@redhat.com>
+
+	* jv-valprint.c (java_value_print): Correctly compute 'obj_addr'.
+
 2012-03-05  Joel Brobecker  <brobecker@adacore.com>
 
 	From Andreas Arnez  <arnez@linux.vnet.ibm.com>:
